[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-appender = "0.2.2"
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.17", features = ["std", "fmt", "env-filter", "json"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
